# communications

./: .editorconfig  .gitignore  .prettierrc.yaml  Dockerfile  README.md  docker-compose.yaml  init-db.sql  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tsconfig.json
.github/workflows/: check.yaml
apps/auth_users/: admin.py  urls.py
apps/calls/: admin.py  apps.py  models.py  package-lock.json  package.json  routing.py  tsconfig.json  urls.py
apps/subscribers/: admin.py  apps.py  models.py  urls.py
auth_users/: admin.py  apps.py
auth_users/admin_models/: __init__.py  user_admin.py
auth_users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_group.py
auth_users/models/: user.py
auth_users/rest/: main.py
calls/: admin.py
calls/admin_models/: __init__.py  operator_admin.py  operator_subscriber_admin.py  subscriber_admin.py  subscriber_call_admin.py
calls/migrations/: 0001_initial.py  0002_alter_subscriber_options_and_more.py  0003_alter_subscriber_birth_date_and_more.py
calls/models/: __init__.py  operator.py  operator_subscriber.py  subscriber.py  subscriber_call.py
calls/rest/: main.py  operator_view_set.py
commands/: run-server.sh  run-tests.sh  start_db.sh
communications/: asgi.py  environment_variable.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py
docker/: Dockerfile  development-docker-compose.yaml  production-docker-compose.yaml  run-server-production-dockerfile
mobile_communications/: asgi.py  settings.py  urls.py  wsgi.py
webpack/: webpack.config.ts
(+234 files in other folders)
